# halo2ex

./: Cargo.toml
src/: base.rs  consts.rs  domains.rs  global.rs  halo2api.rs  lib.rs  types.rs
src/circuit/: algo.rs  base.rs  ic.rs  proof.rs  synthesize.rs
src/primitives/: commitment.rs  keys.rs  nippoint.rs  nullifier.rs  tree.rs  utils.rs  value.rs
src/sinsemilla/: circuit.rs  config.rs
src/test/ic/: circuit.rs
src/test/ic/constants/: auth_g.rs  commit.rs  merklecrh.rs  netcv.rs  nullifier_k.rs  short_commit.rs  valuecommit_r.rs  valuecommit_v.rs
src/test/sinsemilla/: commit.rs  constants.rs
