[package]
name = "halo2lib"
version = "0.1.0-beta.1"
edition = "2021"

[dependencies]
aes = "0.7"
arrayvec = "0.7.0"
bigint = "4"
bitvec = "0.22"
blake2b_simd = "1"
ff = "0.11"
fpe = "0.5"
group = "0.11"
halo2_gadgets = "=0.1.0-beta.1"
halo2_proofs = "=0.1.0-beta.2"
lazy_static = "1"
memuse = { version = "0.2", features = ["nonempty"] }
pasta_curves = "0.3"
proptest = { version = "1.0.0", optional = true }
jubjub = "0.8"
rand = "0.8"
reddsa = "0.2"
serde = { version = "1.0", features = ["derive"] }
subtle = "2.3"
funty = "2.0.0"
incrementalmerkletree = "0.2"

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }

[patch.crates-io]
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "dd57b430dee7c0b163f4035fef2280cd1935036c" }

[dev-dependencies]
criterion = "0.3"
halo2_gadgets = { version = "=0.1.0-beta.1", features = ["test-dependencies"] }
hex = "0.4"
proptest = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "=0.6.1", features = ["criterion", "flamegraph"] }

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
test-dependencies = ["proptest"]
debug = []
